--- a/README
+++ b/README
@@ -5,6 +5,7 @@
 These instructions apply specifically to Ubuntu 10.10 but are very likely to work on other Linux distributions.
 
   The following packaged must be installed for lpfw to work:
+  iptables
   libnetfilter-queue
   libnetfilter-conntrack
   libnfnetlink
