--- a/README
+++ b/README
@@ -4,11 +4,11 @@
 
 These instructions apply specifically to Ubuntu 10.10 but are very likely to work on other Linux distributions.
 
-  The following packaged must be installed for lpfw daemon to run:
+The following packaged must be installed for lpfw daemon to run:
   iptables
   libnetfilter-queue
   libnetfilter-conntrack
-  The following packages must be installed for the graphical frontend to run:
+The following packages must be installed for the graphical frontend to run:
   python-qt4 (this will pull in 80 MB+ of dependencies)
 
 
@@ -19,10 +19,17 @@ SIMPLE CONFIGURATION:
 
 
 ADVANCED CONFIGURATION:
-  1. If you don't want lpfw to look for lpfwcli/lpfwpygui in the same folder, you can pass to lpfw a command line option --cli-path=/--pygui-path= followed by a path to lpfwcli/lpfwgui
-  2. If you want lpfw to start upon system boot-up, lpfw.conf is an upstart script which should be placed into /etc/init.(If your distro doen't use upstart, then the script should be adjusted to your distro's needs). This script expects to find lpfw in /usr/sbin
-  3. 30-lpfw.conf can be placed into /etc/rsyslog.d if you want logs to go to syslog
-  4. Assuming lpfw was launched either by upstart or manually as root, in a terminal window of an X session launch "./lpfw --cli" or "./lpfw --gui" as a regular user (not root). You will see an ncurses-based/graphical frontend.(By default lpfwcli uses zenity popups. If you don't want to use zenity run ./lpfw --cli --no-zenity)
+
+    If you don't want lpfw and lpfwcli/lpfwpygui to be in the same folder, you can pass to lpfw a command line option --cli-path=/--pygui-path= followed by a path to lpfwcli/lpfwgui. Otherwise lpfw rejects the frontend.
+
+    lpfw can be run as user with the following capabilities:
+CAP_SYS_PTRACE, CAP_NET_ADMIN, CAP_DAC_READ_SEARCH, CAP_SETUID, CAP_SETGID, CAP_CHOWN, CAP_FSETID, CAP_KILL
+
+    If you want lpfw to start upon system boot-up, lpfw.conf is an upstart script which should be placed into /etc/init.(If your distro doen't use upstart, then the script should be adjusted to your distro's needs). This script expects to find lpfw in /usr/sbin
+
+    30-lpfw.conf can be placed into /etc/rsyslog.d if you want logs to go to syslog
+
+    Assuming lpfw was launched either by upstart or manually as root, in a terminal window of an X session launch "./lpfw --cli" or "./lpfw --gui" as a regular user (not root). You will see an ncurses-based/graphical frontend.(By default lpfwcli uses zenity popups. If you don't want to use zenity run ./lpfw --cli --no-zenity)
 
 
 
@@ -45,9 +52,6 @@ COMMANDLINE ARGUMENTS:
   --cli-path=
   Path to lpfwcli ncurses frontend. It will be launched in xterm window. Default: in the same folder as lpfw
 
-  --gui-path=
-  Path to a standalone graphical frontend. Default: in the same folder as lpfw
-
   --pygui-path
   Path to python-based graphical frontend lpfwgui.py. It will be launched in python. Default: in the same folder as lpfw 
 
@@ -55,25 +59,16 @@ COMMANDLINE ARGUMENTS:
   --log-traffic=
   --log-debug=
   Enables different levels of logging. Possible values 1 or 0 for yes/no. Default: all three 1.
-  
-  To invoke a frontend, issue the following;
-  lpfw --cli	Ncurses
-  lpfw --gui	Standalone
-  lpfw --pygui	Python-based
 
 
 
 
 KNOWN ISSUES:
-    1. lpfwcli can be invoked only from within X session, it can't work under pure tty(for security reasons).
-    2. Only one program can send ICMP packets simultaneously, if more than one does, LPFW blocks both.
-    3. Only IPv4 is supported, IPv6 support is underway.
-    4. A combination of exceptionally large executables(20Mb+) + slow CPU may result in a 2+ seconds delay when an application connects to the web for the first time, due to heavy calculations performed by sha512 checksumming function.
-    5. Only TCP, UDP, ICMP (partly, see above) protocols are supported. If your system happens to use any other transport protocol besides TCP/UDP/ICMP and you don't want those packets discarded by lpfw, consider adding a rule to iptables something like: >>> iptables -I OUTPUT 1 -p udplite -j ACCEPT <<< This rule should preceed NFQUEUE rule.
-    6. If LPFW crashes, the user will have to issue "iptables -F" as root to be able to access the internet without restarting computer.
-    7. Albeit lpfwgui is a simple frontend, it consumes 30+ Mb of memory. An attempt to reduce memory consumption is underway.
-
-
+    Only IPv4 is supported, IPv6 support is underway.
+    Only one program can send ICMP packets simultaneously, if more than one does, LPFW blocks both.
+    A combination of exceptionally large executables like Skype and SR Ware Iron(20Mb+) + slow CPU may result in a 2+ seconds delay when an application connects to the web for the first time, due to heavy calculations performed by sha512 checksumming function.
+    Only TCP, UDP, ICMP (partly, see above) protocols are supported. If your system happens to use any other transport protocol besides TCP/UDP/ICMP and you don't want those packets discarded by lpfw, consider adding a rule to iptables something like: >>> iptables -I OUTPUT 1 -p udplite -j ACCEPT <<< This rule should preceed NFQUEUE rule.
+    If LPFW crashes, the user will have to issue "iptables -F" as root to be able to access the internet without restarting computer.
 
 
 
@@ -141,7 +136,7 @@ LeopardFlower (LPFW) utilizes a facility provided by netfilter whereby all outgo
 iptables -A OUTPUT -j NFQUEUE --queue-num 11220
 and installs a callback (using libnetfilter_queue) which is notified whenever a packet hits the NFQUEUE (NFQ). The fact that LPFW doesn't need to process every single packet but only those which initiate new connections, significantly decreases LPFW's CPU consumption.
 
-Upon start up, LPFW read a rules file (if any was created in the previous session) which contains  internet access permissions per application. Based upon these rules, whenever a new packet hits NFQ, LPFW decides whether to allow or deny internet access or whether to ask the user what to do if no rule for the application in question has yet been defined.
+Upon start up, LPFW read a rules file which contains internet access permissions per application. Based upon these rules, whenever a new packet hits NFQ, LPFW decides whether to allow or deny internet access or whether to ask the user what to do if no rule for the application in question has yet been defined.
 
 In order to establish a correlation between a packet which hit nfq and the application which sent it, LPFW does the following:
 1. for an outgoing packet - extract source port  (for an incoming packet - extract destination port) and look up in /proc/net/tcp to see which socket corresponds to the port.
@@ -152,4 +147,13 @@ LPFW sets a unique netfilter mark on all connections of a specific app. This ena
 
 SECURITY
 
-LPFW needs to start with capabilities CAP_SYS_PTRACE (to readlink() root files), CAP_NET_ADMIN, CAP_DAC_READ_SEARCH (to scan all /proc/ entries), CAP_SETUID, CAP_SETGID. Each threas tries to keep only capabilities needed just for its execution.
+Only frontend with GID "lpfwuser" can communicate with LPFW. To that end LPFW enable setgid bit on lpfwcli and lpfwpygui.
+LPFW needs to start with the following capabilities:
+CAP_SYS_PTRACE (to readlink() root's links in /proc)
+CAP_NET_ADMIN (to use netfilter_queue and netfilter_conntrack)
+CAP_DAC_READ_SEARCH (to scan all users' /proc/ entries)
+CAP_SETUID (to setuid(0) on itself)
+CAP_SETGID (to setgid("lpfwuser") on itself)
+CAP_CHOWN (to chown group to "lpfwuser" on frontends' executables)
+CAP_FSETID (to enable setgid bit on frontends' executables)
+CAP_KILL (to poll the frontend to be able to know when frontend crashes unexpectedly)
